<resources>
    <string name="app_name">Whatsapp Encrypt</string>
    <string name="title_activity_conversation">Conversation</string>
    <string name="go">GO</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="decrypt">Decrypt</string>
    <string name="decrypt_amp_add"><![CDATA[Decrypt & add]]></string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="whatsapp_number">WhatsApp Number</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="encrypt_file">Encrypt Image</string>
    <string name="decrypt_file">Decrypt Image</string>
    <string name="decrypted_image">Decrypted Image</string>
</resources>
