<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/appBar"
            layout="@layout/app_bar" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/chats_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingBottom="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/encryptx"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="@string/encrypt_file"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/decryptx"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="@string/decrypt_file"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:elevation="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/msg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_cust_bg"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLines="6"
                android:padding="12dp" />

            <ImageButton
                android:id="@+id/send"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/circle_btn"
                android:elevation="8dp"
                android:src="@drawable/ic_send_black_24dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/image_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/decrypted_image"
            android:textAlignment="center"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/decrypt_image"
            android:layout_width="match_parent"
            android:layout_height="450dp" />

        <Button
            android:id="@+id/close_image_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@drawable/chat_bg"
            android:text="@string/close"
            android:textColor="@color/white" />
    </LinearLayout>
</FrameLayout>