<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.encrpyt.whatsapp.whatsappencrypt.PasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center|bottom"
        android:paddingBottom="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="28dp"
        android:layout_weight="2"
        android:gravity="bottom"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <EditText
                android:id="@+id/pass1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeActionId="@+id/pass2"
                android:imeOptions="actionNext"
                android:inputType="numberPassword"
                android:maxLength="1"
                android:shadowColor="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:textSize="28sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <EditText
                android:id="@+id/pass2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeActionId="@+id/pass3"
                android:imeOptions="actionNext"
                android:inputType="numberPassword"
                android:maxLength="1"
                android:shadowColor="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:textSize="28sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <EditText
                android:id="@+id/pass3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeActionId="@+id/pass4"
                android:imeOptions="actionNext"
                android:inputType="numberPassword"
                android:maxLength="1"
                android:shadowColor="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:textSize="28sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <EditText
                android:id="@+id/pass4"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="numberPassword"
                android:maxLength="1"
                android:shadowColor="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:textSize="28sp" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/numberPrompt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingEnd="28dp"
        android:paddingStart="28dp">

        <EditText
            android:id="@+id/number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:inputType="number"
            android:hint="@string/whatsapp_number"
            android:layout_weight="1" />

        <Button
            android:id="@+id/saveNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_cust_bg"
            android:text="@string/save" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center|top"
        android:orientation="vertical">

        <Button
            android:id="@+id/go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/chat_bg"
            android:text="@string/go"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/perm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_cust_bg"
            android:padding="12dp"
            android:text="@string/grant_permissions"
            android:textColor="@color/light_primary_2" />
    </LinearLayout>
</LinearLayout>
